turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: overriding method gauche in class AbstractBuggle of type ()Unit;
 value gauche needs `override' modifier
val gauche = 2
    ^Turmite:6: error: overriding method droite in class AbstractBuggle of type ()Unit;
 value droite needs `override' modifier
val droite = 8 
    ^